--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/geolocation": "^5.0.4",
     "@capacitor/haptics": "5.0.4",
     "@capacitor/keyboard": "5.0.4",
+    "@capacitor/splash-screen": "^5.0.4",
     "@capacitor/status-bar": "5.0.4",
     "@ionic/angular": "^7.0.0",
     "date-fns": "^2.30.0",
